update sdk for go-whatsapp-web-multidevice
