# api_app.go
@@ -3,7 +3,7 @@ WhatsApp API MultiDevice
 
 This API is used for sending whatsapp via API
 
-API version: 3.2.2
+API version: 3.3.0
 */
 
 // Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
@@ -19,26 +19,26 @@ import (
 )
 
 
-// AuthApiService AuthApi service
-type AuthApiService service
+// AppApiService AppApi service
+type AppApiService service
 
-type ApiAuthLoginRequest struct {
+type ApiAppLoginRequest struct {
 	ctx context.Context
-	ApiService *AuthApiService
+	ApiService *AppApiService
 }
 
-func (r ApiAuthLoginRequest) Execute() (map[string]interface{}, *http.Response, error) {
-	return r.ApiService.AuthLoginExecute(r)
+func (r ApiAppLoginRequest) Execute() (map[string]interface{}, *http.Response, error) {
+	return r.ApiService.AppLoginExecute(r)
 }
 
 /*
-AuthLogin Login to whatsapp server
+AppLogin Login to whatsapp server
 
  @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- @return ApiAuthLoginRequest
+ @return ApiAppLoginRequest
 */
-func (a *AuthApiService) AuthLogin(ctx context.Context) ApiAuthLoginRequest {
-	return ApiAuthLoginRequest{
+func (a *AppApiService) AppLogin(ctx context.Context) ApiAppLoginRequest {
+	return ApiAppLoginRequest{
 		ApiService: a,
 		ctx: ctx,
 	}
@@ -46,7 +46,7 @@ func (a *AuthApiService) AuthLogin(ctx context.Context) ApiAuthLoginRequest {
 
 // Execute executes the request
 //  @return map[string]interface{}
-func (a *AuthApiService) AuthLoginExecute(r ApiAuthLoginRequest) (map[string]interface{}, *http.Response, error) {
+func (a *AppApiService) AppLoginExecute(r ApiAppLoginRequest) (map[string]interface{}, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodGet
 		localVarPostBody     interface{}
@@ -54,7 +54,7 @@ func (a *AuthApiService) AuthLoginExecute(r ApiAuthLoginRequest) (map[string]int
 		localVarReturnValue  map[string]interface{}
 	)
 
-	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "AuthApiService.AuthLogin")
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "AppApiService.AppLogin")
 	if err != nil {
 		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
@@ -129,23 +129,23 @@ func (a *AuthApiService) AuthLoginExecute(r ApiAuthLoginRequest) (map[string]int
 	return localVarReturnValue, localVarHTTPResponse, nil
 }
 
-type ApiAuthLogoutRequest struct {
+type ApiAppLogoutRequest struct {
 	ctx context.Context
-	ApiService *AuthApiService
+	ApiService *AppApiService
 }
 
-func (r ApiAuthLogoutRequest) Execute() (map[string]interface{}, *http.Response, error) {
-	return r.ApiService.AuthLogoutExecute(r)
+func (r ApiAppLogoutRequest) Execute() (map[string]interface{}, *http.Response, error) {
+	return r.ApiService.AppLogoutExecute(r)
 }
 
 /*
-AuthLogout Remove database and logout
+AppLogout Remove database and logout
 
  @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- @return ApiAuthLogoutRequest
+ @return ApiAppLogoutRequest
 */
-func (a *AuthApiService) AuthLogout(ctx context.Context) ApiAuthLogoutRequest {
-	return ApiAuthLogoutRequest{
+func (a *AppApiService) AppLogout(ctx context.Context) ApiAppLogoutRequest {
+	return ApiAppLogoutRequest{
 		ApiService: a,
 		ctx: ctx,
 	}
@@ -153,7 +153,7 @@ func (a *AuthApiService) AuthLogout(ctx context.Context) ApiAuthLogoutRequest {
 
 // Execute executes the request
 //  @return map[string]interface{}
-func (a *AuthApiService) AuthLogoutExecute(r ApiAuthLogoutRequest) (map[string]interface{}, *http.Response, error) {
+func (a *AppApiService) AppLogoutExecute(r ApiAppLogoutRequest) (map[string]interface{}, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodGet
 		localVarPostBody     interface{}
@@ -161,7 +161,7 @@ func (a *AuthApiService) AuthLogoutExecute(r ApiAuthLogoutRequest) (map[string]i
 		localVarReturnValue  map[string]interface{}
 	)
 
-	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "AuthApiService.AuthLogout")
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "AppApiService.AppLogout")
 	if err != nil {
 		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
@@ -236,23 +236,23 @@ func (a *AuthApiService) AuthLogoutExecute(r ApiAuthLogoutRequest) (map[string]i
 	return localVarReturnValue, localVarHTTPResponse, nil
 }
 
-type ApiAuthReconnectRequest struct {
+type ApiAppReconnectRequest struct {
 	ctx context.Context
-	ApiService *AuthApiService
+	ApiService *AppApiService
 }
 
-func (r ApiAuthReconnectRequest) Execute() (*SendResponse, *http.Response, error) {
-	return r.ApiService.AuthReconnectExecute(r)
+func (r ApiAppReconnectRequest) Execute() (*SendResponse, *http.Response, error) {
+	return r.ApiService.AppReconnectExecute(r)
 }
 
 /*
-AuthReconnect Reconnecting to whatsapp server
+AppReconnect Reconnecting to whatsapp server
 
  @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- @return ApiAuthReconnectRequest
+ @return ApiAppReconnectRequest
 */
-func (a *AuthApiService) AuthReconnect(ctx context.Context) ApiAuthReconnectRequest {
-	return ApiAuthReconnectRequest{
+func (a *AppApiService) AppReconnect(ctx context.Context) ApiAppReconnectRequest {
+	return ApiAppReconnectRequest{
 		ApiService: a,
 		ctx: ctx,
 	}
@@ -260,7 +260,7 @@ func (a *AuthApiService) AuthReconnect(ctx context.Context) ApiAuthReconnectRequ
 
 // Execute executes the request
 //  @return SendResponse
-func (a *AuthApiService) AuthReconnectExecute(r ApiAuthReconnectRequest) (*SendResponse, *http.Response, error) {
+func (a *AppApiService) AppReconnectExecute(r ApiAppReconnectRequest) (*SendResponse, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodGet
 		localVarPostBody     interface{}
@@ -268,7 +268,7 @@ func (a *AuthApiService) AuthReconnectExecute(r ApiAuthReconnectRequest) (*SendR
 		localVarReturnValue  *SendResponse
 	)
 
-	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "AuthApiService.AuthReconnect")
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "AppApiService.AppReconnect")
 	if err != nil {
 		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
